# notion-cmn-project

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt  shrimp-rules.md  vercel.json
.claude/: settings.json
.claude/agent-memory/test-auto-runner/: MEMORY.md  project_test_setup.md
.claude/agents/: nextjs-app-router-expert.md  nextjs-starter-optimizer.md  test-auto-runner.md
.claude/commands/: add-provider.md  check-env.md  new-api.md  push.md
backend/: main.py
backend/api/v1/: chat.py  embed.py  health.py
backend/core/: config.py  dependencies.py
backend/repositories/: session_repository.py
backend/schemas/: chat.py  common.py
backend/services/llm/: anthropic_service.py  azure_openai_service.py  (+5 more)
blog/: .env.local.example  package-lock.json  package.json  proxy.ts
blog/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
blog/components/: CategoryBadge.tsx  ContactForm.tsx  Footer.tsx  Header.tsx  PostCard.tsx  TagBadge.tsx
blog/lib/: auth.ts  contact.ts  invoice.ts  notion.ts
blog/types/: contact.ts  invoice.ts  post.ts
docs/: PRD.md  ROADMAP.md
scripts/: dev.ps1  dev.sh
shrimp_data/: WebGUI.md  tasks.json
streamlit_app/: api_client.py  app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/components/: chat_message.py  sidebar.py
tests/: conftest.py  test_api_health.py  test_config.py  test_llm_factory.py  test_llm_services.py  test_schemas.py  test_session_repository.py
widget/: chatbot.js  embed.html
(+23 files in other folders)
