[tool.poetry]
name = "llm-chatbot-starter"
version = "1.0.0"
description = "Azure OpenAI 기반 LLM 채팅 스타터킷"
authors = ["ds.kim@metanetglobal.com"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
websockets = "^13.1"

# LLM 프로바이더
openai = "^1.55.0"          # Azure OpenAI + OpenAI 공용
anthropic = "^0.40.0"       # Claude
ollama = "^0.4.0"           # 로컬 모델
google-generativeai = "^0.8.0"  # Google Gemini

# 설정 관리
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"

# 세션 / 캐시
redis = {extras = ["hiredis"], version = "^5.2.0"}

# Streamlit
streamlit = "^1.41.0"
streamlit-extras = "^0.4.7"
httpx = "^0.28.0"

# 유틸리티
uuid = "^1.30"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
